k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client-kube
  name: client-service
spec:
  type: NodePort
  ports:
    - nodePort: 30010
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    component: web
